[tool.poetry]
name = "project-litestar"
version = "0.1.0"
description = "REST API для управления пользователями"
authors = ["Твоё Имя <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
litestar = { extras = ["standard"], version = "^2.0.0" }
litestar-granian = "^0.2.0"
litestar-asyncpg = "^0.1.0"
advanced-alchemy = "^0.20.0"
pydantic = "^2.6.0"
msgspec = "^0.18.6"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"  # для SQLite

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
