[project]
name = "project-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Dowafu",email = "danil548re@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

litestar = "^2.0"
sqlalchemy = "^2.0"
pydantic = "^2.0"
aiomysql = "^0.1.1"  # Если нужно для асинхронной работы с MySQL

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.18"
httpx = "^0.23"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
